--- a/SQLite_DB_DatSet.ipynb
+++ b/SQLite_DB_DatSet.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMC7SdoLvxnp4NuoOlJgUX",
+      "authorship_tag": "ABX9TyOiAuPH9Wp4pXoou/L2Zlr3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We need to import the sqlite3 module and create the database and tables.  You'll see this follows the syntax we have used on previous weeks.\n",
-        "\n",
-        "Note that we have created the student table with a primary key that is not an INTEGER.\n",
-        "\n",
-        "Is this good practice?  \n",
-        "What are the issues and benefits of doing this?"
+        "We need to import the sqlite3 module and create the database and tables.  You'll see this follows the syntax we have used on previous weeks.\n"
       ],
       "metadata": {
         "id": "wUpw9AOgQweW"
@@ -207,9 +202,7 @@
       "source": [
         "**STEP 3: Upload Files:**\n",
         "\n",
-        "Run this box multiple times to upload the relevant csv files. Or drag the files across to the Files window from your desktop.\n",
-        "\n",
-        "Course_Table.csv, Student_Table.csv & Grade_table.csv"
+        "Run this box multiple times to upload the relevant csv files. Or drag the files across to the Files window from your desktop."
       ],
       "metadata": {
         "id": "BH7SbcUPWPcS"
@@ -434,10 +427,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "k65rBCDYKhMB"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "**STEP 4: Load CSV files into the database tables:**\n",
         "\n",
-        "This will populate the database tables with the data from teh csv files.  No need to write INSERT statements.\n",
+        "This will populate the database tables with the data from the csv files.  No need to write INSERT statements.\n",
         "\n",
         "You need to make sure the correct files are loaded into the corresponding tables."
       ],
@@ -469,7 +469,6 @@
         "    import_csv_to_table('olist_geolocation_dataset.csv', 'olist_geolocation')\n",
         "    import_csv_to_table('olist_order_items_dataset.csv', 'olist_order_items')\n",
         "    import_csv_to_table('olist_order_payments_dataset.csv', 'olist_order_payments')\n",
-        "    #import_csv_to_table('olist_order_reviews_dataset.csv', 'olist_order_reviews')\n",
         "    import_csv_to_table('olist_orders_dataset.csv', 'olist_orders')\n",
         "    import_csv_to_table('olist_products_dataset.csv', 'olist_products')\n",
         "    import_csv_to_table('olist_sellers_dataset.csv', 'olist_sellers')\n",
@@ -583,7 +582,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#analyse the customer list."
+        "#analyse the customer list. Think about how many customer, do they have duplicate names, take a look at the  data and bring some insight."
       ],
       "metadata": {
         "id": "xrJ96WysGR-u"
@@ -627,7 +626,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#take customer that ahs the most orders and pull out all the individual order items - is there any consistency"
+        "#take a customer that has the most orders and pull out all the individual order items - is there any consistency - are they buying form the same categories every time."
       ],
       "metadata": {
         "id": "N_j0Dcm-ynUE"
@@ -638,7 +637,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# How are customer paying"
+        "#How are customers paying - which payment methods are used the most"
       ],
       "metadata": {
         "id": "2KoAISC6yujG"
@@ -649,7 +648,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Which payment method generates the most income"
+        "#Which payment method generates the most income for the business"
       ],
       "metadata": {
         "id": "4sosXEHey7bU"
@@ -660,7 +659,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#if possible, payment methods and location - how much order value - identify the area thar spends the highest"
+        "#if possible, look at the payment methods and location - Identify the area that spends the highest amount - you could look at hteh product categories as well."
       ],
       "metadata": {
         "id": "0n4LILzDy_Mr"
@@ -671,7 +670,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#What's the range of order, the min and the max"
+        "#What's the range of orders, the min and the max"
       ],
       "metadata": {
         "id": "WGhZ3g30zKVO"
@@ -682,7 +681,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#What's the average order spend in the categories - shwo the category name in English"
+        "#What's the average order spend in the categories - show the category name in English"
       ],
       "metadata": {
         "id": "iU-k78JCzPrZ"
