--- a/sqlite-exercise/SQLite_DB_DataSet_Answers.ipynb
+++ b/sqlite-exercise/SQLite_DB_DataSet_Answers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNW4uHXtWvDyQOdFK5/E2jS",
+      "authorship_tag": "ABX9TyMXCIYcvw1VUvtdmZlHC8m1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -487,7 +487,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,13 +618,7 @@
         "#show number and value of orders for each customer\n",
         "\n",
         "customersOrdersValue_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_customers.customer_id,\n",
-        "       COUNT(DISTINCT olist_orders.order_id) AS total_orders,\n",
-        "       SUM(olist_order_items.price) AS total_order_value\n",
-        "FROM olist_customers, olist_orders, olist_order_items\n",
-        "WHERE olist_customers.customer_id = olist_orders.customer_id\n",
-        "AND olist_orders.order_id = olist_order_items.order_id\n",
-        "GROUP BY olist_customers.customer_id ORDER BY SUM(olist_order_items.price) DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "\n",
         "\n",
@@ -643,7 +637,9 @@
       "source": [
         "#where do the customers come from - location\n",
         "\n",
-        "cLocation_df = pd.read_sql_query(\"SELECT DISTINCT geolocation_city, COUNT(*) AS 'Customer City' FROM olist_geolocation GROUP BY geolocation_city ORDER BY COUNT(*) DESC\", conn)\n",
+        "cLocation_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
         "print(cLocation_df)\n",
         "cLocation_df.to_csv('cLocation_df.csv', index=False)"
       ],
@@ -659,29 +655,15 @@
         "#look at which sellers are selling the most items\n",
         "\n",
         "sellersSales_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_sellers.seller_id AS 'Seller ID',\n",
-        "       COUNT(DISTINCT olist_orders.order_id) AS 'Total Orders',\n",
-        "       SUM(olist_order_items.price) AS 'Total Sales Value'\n",
-        "FROM olist_order_items, olist_orders, olist_sellers\n",
-        "WHERE olist_order_items.seller_id = olist_sellers.seller_id\n",
-        "AND olist_order_items.order_id = olist_orders.order_id\n",
-        "GROUP BY olist_sellers.seller_id\n",
-        "ORDER BY SUM(olist_order_items.price) DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "print(sellersSales_df)\n",
         "sellersSales_df.to_csv('sellersSales_df.csv', index=False)\n",
         "\n",
-        "\n",
+        "#AVG order value for the seller\n",
         "cSellersAVG_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_sellers.seller_id AS 'Seller ID',\n",
-        "       COUNT(DISTINCT olist_orders.order_id) AS 'Total Orders',\n",
-        "       SUM(olist_order_items.price) AS 'Total Sales Value',\n",
-        "       AVG(olist_order_items.price) AS 'Average Sales Value'\n",
-        "FROM olist_order_items, olist_orders, olist_sellers\n",
-        "WHERE olist_order_items.seller_id = olist_sellers.seller_id\n",
-        "AND olist_order_items.order_id = olist_orders.order_id\n",
-        "GROUP BY olist_sellers.seller_id\n",
-        "ORDER BY AVG(olist_order_items.price) DESC\"\"\", conn)\n",
+        "\n",
+        "\"\"\", conn)\n",
         "\n",
         "print(cSellersAVG_df)\n",
         "cSellersAVG_df.to_csv('cSellersAVG_df.csv', index=False)"
@@ -697,30 +679,14 @@
       "source": [
         "#take a customer that has the most orders and pull out all the individual order items - is there any consistency - are they buying form the same categories every time.\n",
         "customersOrders_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_customers.customer_id,\n",
-        "       COUNT(DISTINCT olist_orders.order_id) AS total_orders,\n",
-        "       COUNT(olist_order_items.product_id) AS total_items_ordered,\n",
-        "       SUM(olist_order_items.price) AS total_order_value\n",
-        "FROM olist_customers, olist_orders, olist_order_items\n",
-        "WHERE olist_customers.customer_id = olist_orders.customer_id\n",
-        "AND olist_orders.order_id = olist_order_items.order_id\n",
-        "GROUP BY olist_customers.customer_id ORDER BY SUM(olist_order_items.price) DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "\n",
         "print(customersOrders_df.head(5))\n",
         "\n",
+        "#get customer items fomr order\n",
         "customerItems_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_order_items.order_id AS 'Order ID',\n",
-        "       olist_order_items.product_id AS 'Product ID',\n",
-        "       olist_order_items.price AS 'Price',\n",
-        "       COUNT(*) OVER() AS 'Items Ordered',\n",
-        "       olist_products.product_category_name AS 'Product Category'\n",
-        "FROM olist_order_items, olist_orders, olist_customers, olist_products\n",
-        "WHERE olist_customers.customer_id = '1617b1357756262bfa56ab541c47bc16'\n",
-        "AND olist_customers.customer_id = olist_orders.customer_id\n",
-        "AND olist_orders.order_id = olist_order_items.order_id\n",
-        "AND olist_order_items.product_id = olist_products.product_id\n",
-        "ORDER BY olist_order_items.price DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "print(customerItems_df)"
       ],
@@ -736,12 +702,7 @@
         "#How are customers paying - which payment methods are used the most\n",
         "\n",
         "paymentMethods_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_order_payments.payment_type AS 'Payment Method',\n",
-        "       COUNT(*) AS 'Number of Payments',\n",
-        "       ROUND(SUM(olist_order_payments.payment_value),2) AS 'Total Spent'\n",
-        "FROM olist_order_payments\n",
-        "GROUP BY olist_order_payments.payment_type\n",
-        "ORDER BY COUNT(*) DESC, ROUND(SUM(olist_order_payments.payment_value),2) DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "print(paymentMethods_df)\n",
         "paymentMethods_df.to_csv('paymentMethods_df.csv', index=False)"
@@ -758,15 +719,7 @@
         "#if possible, look at the payment methods and location - Identify the area that spends the highest amount - you could look at hteh product categories as well.\n",
         "\n",
         "paymentByLocation_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_customers.customer_city AS 'City',\n",
-        "       olist_order_payments.payment_type AS 'Payment Method',\n",
-        "       COUNT(*) AS 'Number of Payments',\n",
-        "       ROUND(SUM(olist_order_payments.payment_value),2) AS 'Total Spent'\n",
-        "FROM olist_order_payments, olist_orders, olist_customers\n",
-        "WHERE olist_order_payments.order_id = olist_orders.order_id\n",
-        "AND olist_orders.customer_id = olist_customers.customer_id\n",
-        "GROUP BY olist_order_payments.payment_type, olist_customers.customer_city\n",
-        "ORDER BY SUM(olist_order_payments.payment_value) DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "\n",
         "# Print formatted output\n",
@@ -782,20 +735,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#Range of payment by location\n",
         "paymentByLocationRange_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_customers.customer_city AS 'City',\n",
-        "       olist_customers.customer_state AS 'State',\n",
-        "       olist_order_payments.payment_type AS 'Payment Method',\n",
-        "       COUNT(*) AS 'Number of Payments',\n",
-        "       SUM(olist_order_payments.payment_value) AS 'Total Spent',\n",
-        "       MAX(olist_order_payments.payment_value) AS 'Max Payment',\n",
-        "       MIN(olist_order_payments.payment_value) AS 'Min Payment',\n",
-        "       (MAX(olist_order_payments.payment_value) - MIN(olist_order_payments.payment_value)) AS 'Payment Range'\n",
-        "FROM olist_order_payments, olist_orders, olist_customers\n",
-        "WHERE olist_order_payments.order_id = olist_orders.order_id\n",
-        "AND olist_orders.customer_id = olist_customers.customer_id\n",
-        "GROUP BY olist_customers.customer_city, olist_customers.customer_state, olist_order_payments.payment_type\n",
-        "ORDER BY olist_customers.customer_state ASC, SUM(olist_order_payments.payment_value) DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "\n",
         "# Round monetary values for better readability\n",
@@ -807,7 +749,7 @@
       "metadata": {
         "id": "4hveDZXRHay6"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -816,15 +758,7 @@
         "#What's the average order spend in the categories - show the category name in English\n",
         "\n",
         "avgOrderSpendByCategory_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT olist_products.product_category_name AS 'Product Category',\n",
-        "       COUNT(DISTINCT olist_orders.order_id) AS 'Number of Orders',\n",
-        "       SUM(olist_order_items.price) AS 'Total Sales Value',\n",
-        "       ROUND(SUM(olist_order_items.price) / COUNT(DISTINCT olist_orders.order_id), 2) AS 'Average Order Spend'\n",
-        "FROM olist_order_items, olist_orders, olist_products\n",
-        "WHERE olist_order_items.order_id = olist_orders.order_id\n",
-        "AND olist_order_items.product_id = olist_products.product_id\n",
-        "GROUP BY olist_products.product_category_name\n",
-        "ORDER BY 'Average Order Spend' DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "\n",
         "# Print formatted output\n",
@@ -840,17 +774,10 @@
     {
       "cell_type": "code",
       "source": [
+        "#get categories in English\n",
+        "\n",
         "avgOrderSpendByCategory_df = pd.read_sql_query(\"\"\"\n",
-        "SELECT pct.product_category_name_english AS 'Product Category',\n",
-        "       COUNT(DISTINCT olist_orders.order_id) AS 'Number of Orders',\n",
-        "       SUM(olist_order_items.price) AS 'Total Sales Value',\n",
-        "       ROUND(SUM(olist_order_items.price) / COUNT(DISTINCT olist_orders.order_id), 2) AS 'Average Order Spend'\n",
-        "FROM olist_order_items, olist_orders, olist_products, product_category_translation pct\n",
-        "WHERE olist_order_items.order_id = olist_orders.order_id\n",
-        "AND olist_order_items.product_id = olist_products.product_id\n",
-        "AND olist_products.product_category_name = pct.product_category_name\n",
-        "GROUP BY pct.product_category_name_english\n",
-        "ORDER BY 'Average Order Spend' DESC\n",
+        "\n",
         "\"\"\", conn)\n",
         "\n",
         "# Print formatted output\n",
