--- a/sqlite-exercise/Exercise_SQLite_DB_Joins.ipynb
+++ b/sqlite-exercise/Exercise_SQLite_DB_Joins.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbJjeOSu7it+TYVKPtS3aj",
+      "authorship_tag": "ABX9TyO+ynAAxpu7jLDyT6PTWZxZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0iMWnVhS8qjx",
         "colab": {
@@ -204,91 +204,10 @@
         "\n"
       ],
       "metadata": {
-        "id": "7YAxyXoB9rN_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b37571c4-5813-41b3-8c99-0d55e65117a5"
+        "id": "7YAxyXoB9rN_"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Table: olist_customers\n",
-            "  Column: customer_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
-            "  Column: customer_unique_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: customer_zip_code_prefix, Type: INT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: customer_city, Type: VARCHAR(255), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: customer_state, Type: VARCHAR(2), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n",
-            "Table: olist_geolocation\n",
-            "  Column: geolocation_zip_code_prefix, Type: INT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: geolocation_lat, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: geolocation_lng, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: geolocation_city, Type: VARCHAR(255), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: geolocation_state, Type: VARCHAR(2), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n",
-            "Table: olist_order_items\n",
-            "  Column: order_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
-            "  Column: order_item_id, Type: INT, NotNull: 0, DefaultVal: None, PrimaryKey: 2\n",
-            "  Column: product_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: seller_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: shipping_limit_date, Type: DATETIME, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: price, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: freight_value, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n",
-            "Table: olist_order_payments\n",
-            "  Column: order_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
-            "  Column: payment_sequential, Type: INT, NotNull: 0, DefaultVal: None, PrimaryKey: 2\n",
-            "  Column: payment_type, Type: VARCHAR(50), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: payment_installments, Type: INT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: payment_value, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n",
-            "Table: olist_order_reviews\n",
-            "  Column: review_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
-            "  Column: order_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: review_score, Type: INT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: review_comment_title, Type: TEXT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: review_comment_message, Type: TEXT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: review_creation_date, Type: DATETIME, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: review_answer_timestamp, Type: DATETIME, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n",
-            "Table: olist_orders\n",
-            "  Column: order_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
-            "  Column: customer_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: order_status, Type: VARCHAR(50), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: order_purchase_timestamp, Type: DATETIME, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: order_approved_at, Type: DATETIME, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: order_delivered_carrier_date, Type: DATETIME, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: order_delivered_customer_date, Type: DATETIME, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: order_estimated_delivery_date, Type: DATETIME, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n",
-            "Table: olist_products\n",
-            "  Column: product_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
-            "  Column: product_category_name, Type: VARCHAR(255), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: product_name_lenght, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: product_description_lenght, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: product_photos_qty, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: product_weight_g, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: product_length_cm, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: product_height_cm, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: product_width_cm, Type: FLOAT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n",
-            "Table: olist_sellers\n",
-            "  Column: seller_id, Type: VARCHAR(32), NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
-            "  Column: seller_zip_code_prefix, Type: INT, NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: seller_city, Type: VARCHAR(255), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "  Column: seller_state, Type: VARCHAR(2), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n",
-            "Table: product_category_translation\n",
-            "  Column: product_category_name, Type: VARCHAR(255), NotNull: 0, DefaultVal: None, PrimaryKey: 1\n",
-            "  Column: product_category_name_english, Type: VARCHAR(255), NotNull: 0, DefaultVal: None, PrimaryKey: 0\n",
-            "--------------------\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -574,22 +493,10 @@
         "\n"
       ],
       "metadata": {
-        "id": "ed0T4gXZLTD4",
-        "outputId": "f363d744-b0b1-4743-8126-410c3d7ee022",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ed0T4gXZLTD4"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Data imported successfully!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -675,35 +582,187 @@
         "customersOrdersValue_df.to_csv('customerOrdersValue_df.csv', index=False)\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VHJfLPeIeU9d",
-        "outputId": "ab675518-16dc-4916-f337-41801c8ac901"
+        "id": "VHJfLPeIeU9d"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "                            customer_id  total_orders  total_order_value\n",
-            "0      1617b1357756262bfa56ab541c47bc16             1           13440.00\n",
-            "1      ec5b2ba62e574342386871631fafd3fc             1            7160.00\n",
-            "2      c6e2731c5b391845f6800c97401a43a9             1            6735.00\n",
-            "3      f48d464a0baaea338cb25f816991ab1f             1            6729.00\n",
-            "4      3fd6777bbce08a352fddd04e4a7cc8f6             1            6499.00\n",
-            "...                                 ...           ...                ...\n",
-            "98661  d2c63ad286e3ca9dd69218008d61ff81             1               2.90\n",
-            "98662  184e8e8e48937145eb96c721ef1f0747             1               2.29\n",
-            "98663  a790343ca6f3fee08112d678b43aa7c5             1               2.20\n",
-            "98664  9f9d249355f63c5c1216a82b802452c1             1               0.85\n",
-            "98665  161b6d415e8b3413c6609c70cf405b5a             1               0.85\n",
-            "\n",
-            "[98666 rows x 3 columns]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#show number and value of orders for each customer\n",
+        "\n",
+        "customersOrdersValue_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "\n",
+        "\n",
+        "\n",
+        "print(customersOrdersValue_df)\n",
+        "customersOrdersValue_df.to_csv('customerOrdersValue_df.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "CLPEQyP2fwss"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#where do the customers come from - location\n",
+        "\n",
+        "cLocation_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "print(cLocation_df)\n",
+        "cLocation_df.to_csv('cLocation_df.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "XyD4qx8Hf4ux"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#look at which sellers are selling the most items\n",
+        "\n",
+        "sellersSales_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "print(sellersSales_df)\n",
+        "sellersSales_df.to_csv('sellersSales_df.csv', index=False)\n",
+        "\n",
+        "#AVG order value for the seller\n",
+        "cSellersAVG_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "\n",
+        "print(cSellersAVG_df)\n",
+        "cSellersAVG_df.to_csv('cSellersAVG_df.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "2GxNywlBf5pn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#take a customer that has the most orders and pull out all the individual order items - is there any consistency - are they buying form the same categories every time.\n",
+        "customersOrders_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "\n",
+        "print(customersOrders_df.head(5))\n",
+        "\n",
+        "#get customer items fomr order\n",
+        "customerItems_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "print(customerItems_df)"
+      ],
+      "metadata": {
+        "id": "bAuxHC11f82A"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#How are customers paying - which payment methods are used the most\n",
+        "\n",
+        "paymentMethods_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "print(paymentMethods_df)\n",
+        "paymentMethods_df.to_csv('paymentMethods_df.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "sSGXLYG-f_LQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#if possible, look at the payment methods and location - Identify the area that spends the highest amount - you could look at hteh product categories as well.\n",
+        "\n",
+        "paymentByLocation_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "\n",
+        "# Print formatted output\n",
+        "print(paymentByLocation_df)\n",
+        "paymentByLocation_df.to_csv('paymentByLocation_df.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "JtBhMZIRgBxZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Range of payment by location\n",
+        "paymentByLocationRange_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "\n",
+        "# Round monetary values for better readability\n",
+        "paymentByLocationRange_df[['Total Spent', 'Max Payment', 'Min Payment', 'Payment Range']] = paymentByLocationRange_df[['Total Spent', 'Max Payment', 'Min Payment', 'Payment Range']].round(2)\n",
+        "\n",
+        "# Print formatted output\n",
+        "paymentByLocationRange_df.to_csv('paymentByLocationRange_df.csv',index=False)\n"
+      ],
+      "metadata": {
+        "id": "TNd5GPFFgE8P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#What's the average order spend in the categories - show the category name in English\n",
+        "\n",
+        "avgOrderSpendByCategory_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "\n",
+        "# Print formatted output\n",
+        "print(avgOrderSpendByCategory_df.to_string(index=False))\n",
+        "avgOrderSpendByCategory_df.to_csv('avgOrderSpendByCategory_df.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "MujNopwEgKJU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#get categories in English\n",
+        "\n",
+        "avgOrderSpendByCategory_df = pd.read_sql_query(\"\"\"\n",
+        "\n",
+        "\"\"\", conn)\n",
+        "\n",
+        "# Print formatted output\n",
+        "print(avgOrderSpendByCategory_df.to_string(index=False))"
+      ],
+      "metadata": {
+        "id": "tZMMXxdUgMvd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
