--- a/Normalisation/1NF_Exercise.ipynb
+++ b/Normalisation/1NF_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNizGpoe4T1O20Y+uP8yHIY",
+      "authorship_tag": "ABX9TyPdd+31/Q5nV9pmbY+OTLht",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,119 +27,67 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# **Implementing 1st Normal From**\n",
-        "\n",
-        "---\n",
-        "\n",
-        "We're going to look at how to apply First Normal Form (1NF) by designing and restructuring a Python-based database representation (using lists or pandas DataFrames).\n",
-        "\n",
-        "We'll normalise a given dataset by ensuring:\n",
-        "*   No repeating groups or arrays.\n",
-        "*   Each column contains atomic (indivisible) values.\n",
-        "*   Each row has a unique identifier.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "T0XGftgulmHN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **Task Description:**\n",
-        "\n",
-        "---\n",
-        "\n",
-        "You are given a dataset representing student course registrations, where multiple courses are stored in a single column as a comma-separated list.\n",
-        "\n",
-        "Your task is to normalise this data to First Normal Form (1NF) using Python.\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "2d8U8pP9mkiW"
-      }
-    },
-    {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "_a94k79vk5XD"
-      },
-      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "\n",
-        "# Given dataset (Unnormalised)\n",
-        "data = {\n",
-        "    \"Module\": [\"M1\", \"M2\", \"M3\", \"M4\", \"M5\"],\n",
-        "    \"Dept\": [\"D1\", \"D1\", \"D1\", \"D2\", \"D2\"],\n",
-        "    \"Lecturer\": [\"L1\", \"L1\", \"L2\", \"L3\", \"L4\"],\n",
-        "    \"Texts\": [\"T1, T2\", \"T1, T3\", \"T4\", \"T1, T5\", \"T6\"]\n",
-        "}\n",
+        "# Install the necessary library if not already installed\n",
+        "!pip install pandas\n",
         "\n",
-        "df = pd.DataFrame(data)\n",
-        "print(df)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **Transform the Data to 1NF**\n",
-        "\n",
-        "---\n",
-        "\n",
-        "You need to eliminate multi-valued attributes (the courses column) and create a separate row for each course while preserving student details.\n",
-        "\n",
-        "**Initialise an Empty List**\n",
-        "Crates and empty list to store the transformed rows in a normalised format.\n",
-        "\n",
-        "normalised_data = []\n",
-        "\n",
-        "**Loop Through the Dataframe**\n",
-        "df.iterrows() - steps through each row of the DataFrame\n",
-        "The'_' is used because we dont' need the row index, jsut the row values\n",
-        "\n",
-        "for _, row in df.iterrows():\n",
-        "\n",
-        "**Extract Data from Each Row**\n",
-        "Split based on the ',' : \"T1, T2\" -> [\"T1\",\"T2\"]\n",
-        "\n",
-        "    Module = row[\"Module\"]\n",
-        "    Dept = row[\"Dept\"]\n",
-        "    Lecturer = row[\"Lecturer\"]\n",
-        "    Texts = row[\"Texts\"].split(\", \")  # Splitting courses\n",
-        "\n",
-        "**Creates Normalised Rows**\n",
-        "For each course, a new dictionary is created and added to normalised_data\n",
-        "\n",
-        "    for module in Modules:\n",
-        "        normalised_data.append({\"Module\": Module, \"Dept\": Dept, \"Lecturer\": Lecturer, \"Module\": module})\n",
-        "\n",
-        "**Create a New DataFrame**\n",
-        "Normailsed data, each course has it's own row.\n",
-        "\n",
-        "df_1NF = pd.DataFrame(normalised_data)\n",
-        "\n"
+        "df = pd.read_csv('<INSERT FILENAME>')\n",
+        "print(df.head())\n"
       ],
       "metadata": {
-        "id": "QmZkD0TXn0J8"
-      }
+        "id": "d4FXYiYazeSz",
+        "outputId": "5091f5f2-16a0-4de3-e96f-f5e57773ebcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.11/dist-packages (2.2.2)\n",
+            "Requirement already satisfied: numpy>=1.23.2 in /usr/local/lib/python3.11/dist-packages (from pandas) (1.26.4)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.11/dist-packages (from pandas) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas) (2025.1)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas) (2025.1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+            "  first_name last_name            products_purchased  total_spend  \\\n",
+            "0       Emma     Brown       Tooth Brush, Hair Dryer      1024.56   \n",
+            "1     Olivia     Smith   Tooth Brush, TV, Hair Dryer      2078.96   \n",
+            "2        Bob     Moore  Tooth Brush, Computer, Phone      2404.72   \n",
+            "3      David     Brown               Computer, Phone      1151.34   \n",
+            "4       Noah     Jones               Mouse, Computer      1370.38   \n",
+            "\n",
+            "  payment_method  \n",
+            "0     Google Pay  \n",
+            "1     Google Pay  \n",
+            "2     Google Pay  \n",
+            "3    Credit Card  \n",
+            "4    Credit Card  \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "normalised_data = []\n",
         "\n",
-        "for _, row in df.iterrows():\n",
-        "  Module = row[\"Module\"]\n",
-        "  Dept = row[\"Dept\"]\n",
-        "  Lecturer = row[\"Lecturer\"]\n",
-        "  Modules = row[\"Texts\"].split(\", \")  # Splitting courses\n",
+        "#modify the script to load the data and create teh nromalised dataframe\n",
         "\n",
-        "  for module in Modules:\n",
-        "    normalised_data.append({\"Module\": Module, \"Dept\": Dept, \"Lecturer\": Lecturer, \"Module\": module})\n",
+        "for _, row in df.iterrows():\n",
+        "  ATT1 = row[\"<FIELD ATT>\"]\n",
+        "  ATT2 = row[\"<FIELD ATT2>\"]\n",
+        "  ATT3 = row[\"<FIELD ATT3>\"]\n",
+        "  ATT4 = row[\"<FIELD ATT4>\"].split(\", \")  # Splitting courses\n",
+        "\n",
+        "  for products in < FIELD ATT4 >:\n",
+        "    normalised_data.append({\"1\": ATT1, \"2\": ATT2, \"3\": ATT3, \"4\": ATT4})\n",
         "\n",
         "# Step 2: Create new DataFrame\n",
         "df_1NF = pd.DataFrame(normalised_data)\n",
